Improve shell